--- a/love_dose/index.html
+++ b/love_dose/index.html
@@ -9,6 +9,17 @@
     <title>Document</title>
   </head>
   <body>
-    
+    <!-- home screen  -->
+    <section>
+      
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
   </body>
 </html>
