--- a/love_dose/index.html
+++ b/love_dose/index.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css"/>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- home screen  -->
-    <section>
-      
-    </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Document</title>
+</head>
+
+<body>
+  <!-- home screen  -->
+  <section>
+    <div class="">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center"  style="background-image: url('imgs/love3.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-center text-white text-3xl lg:text-5xl">ও গো মোর মহারাণী..! <br> আপনি কি আমাকে সবচেয়ে বেশি
+            ভালোবাসেন?</h1>
+          <!-- options -->
+          <div class="flex justify-around">
+            <button class="btn border-t-pink-500 bg-white text-red-600 text-xl">Yes</button>
+            <button class="btn border-t-pink-500 bg-white text-red-600 text-xl">No</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+</body>
+
 </html>
