--- a/love_dose/index.html
+++ b/love_dose/index.html
@@ -12,17 +12,35 @@
 <body>
   <!-- home screen  -->
   <section>
-    <div class="">
+    <div class="" id="homeScreen">
       <!-- container -->
-      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center"  style="background-image: url('imgs/love3.jpg');">
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/love3.jpg');">
         <!-- contents -->
         <div class="p-4 space-y-20">
           <h1 class="text-center text-white text-3xl lg:text-5xl">ও গো মোর মহারাণী..! <br> আপনি কি আমাকে সবচেয়ে বেশি
             ভালোবাসেন?</h1>
           <!-- options -->
           <div class="flex justify-around">
-            <button class="btn border-t-pink-500 bg-white text-red-600 text-xl">Yes</button>
-            <button class="btn border-t-pink-500 bg-white text-red-600 text-xl">No</button>
+            <button id="yes1" class="btn border-t-pink-500 bg-white text-red-600 text-xl">Yes</button>
+            <button id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">No</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- screen 2 -->
+  <section>
+    <div class="hidden" id="nextScreen">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/love2.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-center text-[#ff3939] text-3xl lg:text-5xl">আপনি আমাকে কতটুকু ভালোবাসেন?</h1>
+          <div class="flex justify-around">
+            <button id="" class="btn border-t-pink-500 bg-white text-red-600 text-2xl">&#8734;</button>
+            <button id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">0</button>
           </div>
         </div>
       </div>
@@ -35,7 +53,23 @@
   <section></section>
   <section></section>
   <section></section>
-  <section></section>
+
+  <script>
+    const btn = document.getElementById('yes1');
+    btn.addEventListener('click', function () {
+      const homeScreen = document.getElementById('homeScreen');
+      const screen = document.getElementById('nextScreen')
+      homeScreen.classList.add('hidden');
+      screen.classList.remove('hidden')
+
+    })
+    function nextScreen(id, value) {
+      const element = document.getElementById(id);
+
+    }
+  </script>
+
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
