see you tomorrow

--- a/love_dose/index.html
+++ b/love_dose/index.html
@@ -13,7 +13,7 @@
   
   <!-- home screen  -->
   <section>
-    <div class="" id="homeScreen">
+    <div class="hidden" id="homeScreen">
       <!-- container -->
       <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
         style="background-image: url('imgs/love3.jpg');">
@@ -73,6 +73,23 @@
         <!-- contents -->
         <div class="p-4 space-y-20">
           <h1 class="text-center text-[#39ff6b] text-3xl lg:text-5xl">আপনি কি আমার জন্য সব ত্যাগ করতে পারবেন?</h1>
+          <div class="flex justify-around">
+            <button onclick="nextScreen()" id="" class="btn border-t-pink-500 bg-white text-red-600 text-2xl">Yes</button>
+            <button onclick="nextScreen()" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">No</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- screen 5 -->
+  <section>
+    <div class="" id="screen4">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/love4.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-center text-[#3537bd] text-3xl lg:text-5xl">সারাক্ষণ আমার কথা মনে পড়ে তাই না?</h1>
           <div class="flex justify-around">
             <button onclick="nextScreen()" id="" class="btn border-t-pink-500 bg-white text-red-600 text-2xl">Yes</button>
             <button onclick="nextScreen()" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">No</button>
