--- a/love_dose/index.html
+++ b/love_dose/index.html
@@ -13,7 +13,7 @@
   
   <!-- home screen  -->
   <section>
-    <div class="hidden" id="homeScreen">
+    <div class="" id="homeScreen">
       <!-- container -->
       <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
         style="background-image: url('imgs/love3.jpg');">
@@ -83,7 +83,7 @@
   </section>
   <!-- screen 5 -->
   <section>
-    <div class="" id="screen4">
+    <div class="hidden" id="screen4">
       <!-- container -->
       <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
         style="background-image: url('imgs/love4.jpg');">
