--- a/love_dose/index.html
+++ b/love_dose/index.html
@@ -13,10 +13,10 @@
   
   <!-- home screen  -->
   <section>
-    <div class="" id="homeScreen">
+    <div class="hidden" id="homeScreen">
       <!-- container -->
       <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
-        style="background-image: url('imgs/love3.jpg');">
+        style="background-image: url('imgs/love8.jpg');">
         <!-- contents -->
         <div class="p-4 space-y-20">
           <h1 class="text-center text-white text-3xl lg:text-5xl">ও গো মোর মহারাণী..! <br> আপনি কি আমাকে সবচেয়ে বেশি
@@ -41,7 +41,7 @@
           <h1 class="text-center text-[#ff3939] text-3xl lg:text-5xl">আপনি আমাকে কতটুকু ভালোবাসেন?</h1>
           <div class="flex justify-around">
             <button onclick="nextScreen('nextScreen', 'screen3')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">&#8734;</button>
-            <button onclick="nextScreen('nextScreen', 'screen3')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-2xl">একটুও না</button>
+            <button onclick="nextScreen('nextScreen', 'screen3')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">একটুও না</button>
           </div>
         </div>
       </div>
@@ -57,8 +57,8 @@
         <div class="p-4 space-y-20">
           <h1 class="text-center text-[#ff3939] text-3xl lg:text-5xl">আপনি কি আমাকে লবণের ভালোবাসেন?</h1>
           <div class="flex justify-around">
-            <button onclick="nextScreen('screen3', 'screen4')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-2xl">Yes</button>
-            <button onclick="nextScreen('screen3', 'screen4')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">No</button>
+            <button onclick="nextScreen('screen3', 'screen4')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">Yes প্রিয়</button>
+            <button onclick="nextScreen('screen3', 'screen4')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">একদমই না</button>
           </div>
         </div>
       </div>
@@ -89,15 +89,103 @@
         style="background-image: url('imgs/love11.jpg');">
         <!-- contents -->
         <div class="p-4 space-y-20">
-          <h1 class="text-center text-[#ff32f5] text-3xl lg:text-5xl">সারাক্ষণ আমার কথা মনে পড়ে তাই না?</h1>
+          <h1 class="text-center text-[#ff4bf6] text-3xl lg:text-5xl">সারাক্ষণ আমার কথা মনে পড়ে তাই না?</h1>
           <div class="flex justify-around">
-            <button onclick="nextScreen()" id="" class="btn border-t-pink-500 bg-white text-red-600 text-2xl">জ্বি</button>
-            <button onclick="nextScreen()" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">একটুুও না</button>
+            <button onclick="nextScreen('screen5', 'screen6')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">জ্বি</button>
+            <button onclick="nextScreen('screen5', 'screen6')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">একটুুও না</button>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <!-- screen 6 -->
+  <section>
+    <div class="hidden" id="screen6">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/love14.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-center text-[#000000] text-3xl lg:text-5xl">আমার গোলাপটা কে?</h1>
+          <div class="flex justify-between">
+            <button onclick="nextScreen('screen6', 'screen7')" id="" class="btn border-t-pink-500 bg-white text-[#1b682e] text-xl">আমিইতো</button>
+            <button onclick="nextScreen('screen6', 'screen7')" id="" class="btn border-t-pink-500 bg-white text-[#1b682e] text-xl">আপনার পচাডা</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- screen 7 -->
+  <section>
+    <div class="hidden" id="screen7">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/love16.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-center text-[#ffffff] text-3xl lg:text-5xl">আমারে আপনার কোন নামে ডাকতে ভালো লাগে?</h1>
+          <div class="flex justify-around">
+            <button onclick="nextScreen('screen7', 'screen8')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">জান</button>
+            <button onclick="nextScreen('screen7', 'screen8')" id="" class="btn border-t-pink-500 bg-white text-red-600 text-xl">পচা</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- screen 8 -->
+  <section>
+    <div class="hidden" id="screen7">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/love15.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-center text-[#ffffff] text-3xl lg:text-5xl">আমার তিলডিরে আদর করেন নি?</h1>
+          <div class="flex justify-between">
+            <button onclick="nextScreen('screen8', 'screen9')" id="" class="btn border-t-pink-500 bg-white text-black text-xl">খালি কিলাই</button>
+            <button onclick="nextScreen('screen8', 'screen9')" id="" class="btn border-t-pink-500 bg-white text-[#000000] text-xl">জ্বি অনেক আদর করি</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- screen 9 -->
+  <section>
+    <div class="hidden" id="screen7">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/love15.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-center text-[#ffffff] text-3xl lg:text-5xl">আমারে কাছে পাইলে কি করবেন?</h1>
+          <div class="flex flex-col lg:flex-row gap-8 lg:gap-0 justify-around">
+            <button onclick="nextScreen('screen9', 'screen10')" id="" class="btn border-t-pink-500 bg-white text-black text-xl">আদর করমু</button>
+            <button onclick="nextScreen('screen9', 'screen10')" id="" class="btn border-t-pink-500 bg-white text-[#000000] text-base">আম্মু আর আমি খালি বকমু</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- screen 10 -->
+  <section>
+    <div class="" id="screen7">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs//love19.avif');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-center text-[#ffffff] text-3xl lg:text-5xl">আজকে কিন্তু আমার ঠোট, তিল, বুক, পেট, নাভী আর যা যা আছে সব লাগব</h1>
+          <div class="flex flex-col lg:flex-row gap-8 lg:gap-0 justify-around">
+            <button onclick="nextScreen('screen10', 'screen11')" id="" class="btn border-t-pink-500 bg-white text-black">জি, সবইতো আপনার</button>
+            <button onclick="nextScreen('screen10', 'screen11')" id="" class="btn border-t-pink-500 bg-white text-[#000000]">না, খালি কিলামু</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <section></section>
   <section></section>
   <section></section>
