--- a/love_dose/index.html
+++ b/love_dose/index.html
@@ -135,7 +135,7 @@
   </section>
   <!-- screen 8 -->
   <section>
-    <div class="hidden" id="screen7">
+    <div class="hidden" id="screen8">
       <!-- container -->
       <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
         style="background-image: url('imgs/love15.jpg');">
@@ -152,7 +152,7 @@
   </section>
   <!-- screen 9 -->
   <section>
-    <div class="hidden" id="screen7">
+    <div class="hidden" id="screen9">
       <!-- container -->
       <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
         style="background-image: url('imgs/love15.jpg');">
@@ -169,10 +169,10 @@
   </section>
   <!-- screen 10 -->
   <section>
-    <div class="" id="screen7">
+    <div class="hidden" id="screen10">
       <!-- container -->
       <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
-        style="background-image: url('imgs//love19.avif');">
+        style="background-image: url('imgs/love17.jpg');">
         <!-- contents -->
         <div class="p-4 space-y-20">
           <h1 class="text-center text-[#ffffff] text-3xl lg:text-5xl">আজকে কিন্তু আমার ঠোট, তিল, বুক, পেট, নাভী আর যা যা আছে সব লাগব</h1>
@@ -184,14 +184,52 @@
       </div>
     </div>
   </section>
+  <!-- screen 11 -->
+  <section>
+    <div class="hidden" id="screen11">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/love18.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-center text-[#ffffff] text-3xl lg:text-5xl">আমার এখনই 101 লাগব।</h1>
+          <div class="flex flex-col lg:flex-row gap-8 lg:gap-0 justify-around">
+            <button onclick="nextScreen('screen10', 'screenyes')" id="yes" class="btn border-t-pink-500 bg-white text-black">জি, এখনই দিতাছি</button>
+            <button onclick="nextScreen('screen10', 'screenno')" id="no" class="btn border-t-pink-500 bg-white text-[#000000]">না, দিতাম না</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- screen yes -->
+  <section>
+    <div class="hidden" id="screenyes">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/labbp.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-[#fffefe] text-center text-xl font-extrabold">আমি আমার মহারাণীটারে ছাড়া একটা মুহুর্তও থাকতে পারি না। সে খালি আমারে জ্বালায়। কিন্তু তারে নিয়া নানান স্বপ্ন দেথতে আমার  এতো ভালো লাগে। খালি মনে চায় তারে আগলাইয়া ধইরা রাখি। অনেক ভালোবাসি আমি আমার মহারাণীটারে।</h1>
+          <h1></h1>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- screen no -->
+  <section>
+    <div class="" id="screenno">
+      <!-- container -->
+      <div class="min-h-screen bg-cover bg-no-repeat bg-center flex mx-auto items-center justify-center"
+        style="background-image: url('imgs/ummma.jpg');">
+        <!-- contents -->
+        <div class="p-4 space-y-20">
+          <h1 class="text-[#000000] text-2xl text-center font-extrabold">যদি খালি না পাই দেইখেন মাইরাই লামু কামড়াইতে কামড়াইতে।</h1>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
-  <section></section>
-  <section></section>
-  <section></section>
-  <section></section>
-  <section></section>
-  <section></section>
 
   <script>
     function nextScreen(id, id2) {
@@ -199,8 +237,11 @@
       const element2 = document.getElementById(id2)
       element.classList.add('hidden')
       element2.classList.remove('hidden')
-
     }
+    const labb0 = document.getElementById('yes');
+    const notlabbo = document.getElementById('no');
+    
+
   </script>
 
   <script src="scripts/script.js"></script>
